Mon Oct 13 13:21:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.txt:
        * rpmbuild/ace-tao.spec:
          Incremented already version number, release script doesn't do this
          yet

        * rpmbuild/ace-tao-ciao.txt:
          icmp is now enabled by default on linux

Mon Oct 13 11:10:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * include/makeinclude/platform_lynxos.GNU:
          Problems with Lynxos5.0 due to -mshared being passed to compiler
          (inaddition to linker)

Mon Oct 13 07:21:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Local_Name_Space_T.cpp:
        * ace/MEM_Connector.cpp:
        * ace/Multihomed_INET_Addr.cpp:
        * ace/Sock_Connect.cpp:
          ACE_TCHAR fixes

Fri Oct 10 08:57:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Stack_Trace.cpp:
          Disable MSVC warning 4748 "/GS can not protect parameters
          and local variables from local buffer overrun because
          optimizations are disabled in function"

Thu Oct  9 21:52:18 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-common.h: Add ACE_HAS_ICMP_SUPPORT if Winsock 2
          is available.

        * tests/Network_Adapters_Test.{h cpp}: Removed extraneous ACE::init.
          Compare IP addresses using ACE_INET_Addr::is_ip_equal() instead of
          comparing get_ip_address() returns - this allows it to work with
          either IPv4 or IPv6.

Thu Oct  9 17:54:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        Added more WinCE6 support by integrating some changes from OCI.
        Mon Aug 11 15:40:37 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>
        * ace/config-win32-msvc-8.h:
        * ace/config-WinCE.h:
          WinCE 6.0 supports TSS and still does not support sig_atomic_t.

Wed Oct  8 21:06:42 UTC 2008  Steve Huston  <shuston@riverace.com>
